# hip3_botv2

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  REVIEW_NOTES_2026-01-21.md  about_hip3.md  about_ws.md  docker-compose-trading.yml  docker-compose.yml  main.py  pyproject.toml  review.md
.claude/: roadmap.md
.claude/agents/: code-reviewer.md  code-simplifier.md  codebase-explorer.md  risk-gate-analyzer.md  rust-builder.md  security-reviewer.md  spec-manager.md  test-runner.md  ws-debugger.md
.claude/plans/: 2026-01-18-implementation-continuation.md  2026-01-18-oracle-dislocation-taker.md  2026-01-19-phase-a-review-fixes.md  2026-01-19-phase-b-3.1-review-response.md  2026-01-19-phase-b-executor-implementation.md  2026-01-24-mainnet-test-failure-fix.md  2026-01-24-orderUpdates-array-format-fix.md  2026-01-24-review-findings-fix.md  2026-01-24-speccache-initialization-fix.md  2026-01-24-subscriptionResponse-ack-fix.md  2026-01-25-auto-exit-integration.md  2026-01-25-signature-v-string-type.md  2026-01-25-ws-post-json-format-fix.md  2026-01-28-post-response-status-handling.md  2026-01-31-tick-interval-optimization.md  2026-02-03-ws-driven-exit.md  stateless-growing-stallman.md
.claude/specs/: 2026-01-18-oracle-dislocation-taker.md  2026-01-19-24h-test-bugfix.md  2026-01-19-phase-a-analysis.md  (+18 more)
analysis/: 2026-01-22-48hour-analysis-complete.json  2026-01-22-48hour-analysis-complete.md  2026-01-22-48hour-analysis.csv  2026-01-22-48hour-analysis.json  2026-01-22-48hour-analysis.md  optimal_thresholds.json  optimal_thresholds_complete.json
config/: default.toml  mainnet-execution-test.toml  mainnet-gold-test.toml  mainnet-optimal-test.toml  mainnet-phaseA-all.toml  mainnet-phaseA-test.toml  mainnet-test.toml  mainnet-trading-parallel.toml  mainnet.toml  testnet.toml
crates/hip3-bot/: Cargo.toml
crates/hip3-bot/src/: app.rs  config.rs  edge_tracker.rs  error.rs  lib.rs  main.rs
crates/hip3-bot/tests/: ws_lifecycle_test.rs
crates/hip3-bot/tests/integration/: mod.rs
crates/hip3-bot/tests/integration/common/: mock_ws.rs  mod.rs
crates/hip3-core/: Cargo.toml
crates/hip3-core/src/: decimal.rs  error.rs  execution.rs  lib.rs  market.rs  order.rs  trading_session.rs  types.rs
crates/hip3-dashboard/: Cargo.toml
crates/hip3-dashboard/src/: broadcast.rs  config.rs  lib.rs  server.rs  state.rs  types.rs
crates/hip3-dashboard/static/: index.html
crates/hip3-detector/: Cargo.toml
crates/hip3-detector/src/: config.rs  cross_tracker.rs  detector.rs  error.rs  fee.rs  lib.rs  signal.rs
crates/hip3-executor/: Cargo.toml
crates/hip3-executor/src/: batch.rs  error.rs  executor.rs  executor_loop.rs  lib.rs  nonce.rs  price_provider.rs  ready.rs  real_ws_sender.rs  risk.rs  signer.rs  ws_sender.rs
crates/hip3-feed/: Cargo.toml
crates/hip3-feed/src/: error.rs  lib.rs  market_state.rs  oracle_tracker.rs  parser.rs
crates/hip3-mm/: Cargo.toml
crates/hip3-mm/src/: config.rs  inventory.rs  lib.rs  quote_engine.rs  quote_manager.rs  volatility.rs
crates/hip3-persistence/: Cargo.toml
crates/hip3-persistence/src/: error.rs  lib.rs  writer.rs
crates/hip3-position/: Cargo.toml
crates/hip3-position/src/: error.rs  exit_watcher.rs  flatten.rs  lib.rs  mark_regression.rs  oracle_exit.rs  time_stop.rs  tracker.rs
crates/hip3-registry/: Cargo.toml
crates/hip3-registry/src/: client.rs  error.rs  lib.rs  preflight.rs  spec_cache.rs  user_state.rs
crates/hip3-risk/: Cargo.toml
crates/hip3-risk/src/: error.rs  gates.rs  hard_stop.rs  lib.rs  market_health.rs
crates/hip3-telemetry/: Cargo.toml
crates/hip3-telemetry/src/: daily_stats.rs  error.rs  lib.rs  logging.rs  metrics.rs
crates/hip3-ws/: Cargo.toml
crates/hip3-ws/src/: connection.rs  error.rs  heartbeat.rs  lib.rs  message.rs  rate_limiter.rs  subscription.rs  ws_write_handle.rs
crates/hip3-ws/tests/: subscription_ack_integration.rs
review/: 2026-01-19-24h-test-bugfix-plan-review.md  2026-01-19-phase-a-24h-test-bugs-root-cause.md  2026-01-19-phase-b-executor-implementation-3.1-review.md  2026-01-19-roadmap-review.md  2026-01-20-phase-b-executor-implementation-3.2-orderbuilder-review.md  2026-01-20-phase-b-executor-implementation-3.2-signer-review.md  2026-01-20-phase-b-executor-implementation-3.3-position-review.md  2026-01-20-phase-b-executor-implementation-3.4-integration-review.md  2026-01-21-ethereal-sauteeing-galaxy-implementation-rereview.md  2026-01-21-ethereal-sauteeing-galaxy-plan-review.md  2026-01-21-mainnet-micro-test-readiness-rereview.md  2026-01-21-phase-b-executor-implementation-3.5-testnet-review.md  2026-01-21-phase-b-executor-implementation-3.6-mainnet-micro-test-review.md  2026-01-21-phase-b-executor-implementation-3.7-ws-integration-review.md  2026-01-21-phase-b-executor-implementation-4-risk-review.md  2026-01-21-phase-b-implementation-code-review.md  2026-01-21-ws_sender-before-after.md  2026-01-21-ws_sender-code-review.md  2026-01-21-ws_sender-review-summary.md  2026-01-21-ws_sender-simplification-suggestions.md  2026-01-22-api-wallet-address-separation-review.md  2026-01-22-ethereal-sauteeing-galaxy-implementation-rereview-2.md  2026-01-22-ethereal-sauteeing-galaxy-implementation-review.md  2026-01-22-ethereal-sauteeing-galaxy-plan-rereview-2.md  2026-01-22-ethereal-sauteeing-galaxy-plan-rereview-3.md  2026-01-22-ethereal-sauteeing-galaxy-plan-rereview.md  2026-01-22-ethereal-sauteeing-galaxy-plan-review.md  2026-01-22-hip3-bot-core-rereview.md  2026-01-22-hip3-bot-core-review.md  2026-01-22-hip3-executor-comprehensive-review.md  2026-01-22-hip3-executor-rereview.md  2026-01-22-hip3-position-rereview.md  2026-01-22-hip3-position-review.md  2026-01-22-mainnet-microtest-bug-review.md  2026-01-22-mainnet-microtest-safety-fixes-review.md  2026-01-22-mainnet-microtest-stop-runbook.md  2026-01-22-path-to-perfect-score.md  2026-01-23-liquidity-best_size-review.md  2026-01-23-stateless-growing-stallman-plan-review-10.md  2026-01-23-stateless-growing-stallman-plan-review-11.md  (+56 more)
scripts/: deploy-vps.sh  mainnet_microtest_stop.sh  monitor_24h_test.sh
(+6 files in other folders)
