[workspace]
resolver = "2"
members = [
    "crates/hip3-core",
    "crates/hip3-ws",
    "crates/hip3-feed",
    "crates/hip3-registry",
    "crates/hip3-risk",
    "crates/hip3-detector",
    "crates/hip3-executor",
    "crates/hip3-position",
    "crates/hip3-telemetry",
    "crates/hip3-persistence",
    "crates/hip3-bot",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["hip3-bot team"]
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
rustls = { version = "0.23", features = ["ring"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Numeric precision
rust_decimal = { version = "1", features = ["serde", "serde-with-str"] }
rust_decimal_macros = "1"

# Configuration
config = "0.14"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = "0.13"

# Data persistence
parquet = { version = "53", features = ["async"] }
arrow = { version = "53", features = ["chrono-tz"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7", features = ["time"] }

# HTTP client (for REST API fallback)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
dashmap = "6"
once_cell = "1"

# Testing
mockall = "0.13"
tokio-test = "0.4"

# Internal crates
hip3-core = { path = "crates/hip3-core" }
hip3-ws = { path = "crates/hip3-ws" }
hip3-feed = { path = "crates/hip3-feed" }
hip3-registry = { path = "crates/hip3-registry" }
hip3-risk = { path = "crates/hip3-risk" }
hip3-detector = { path = "crates/hip3-detector" }
hip3-executor = { path = "crates/hip3-executor" }
hip3-position = { path = "crates/hip3-position" }
hip3-telemetry = { path = "crates/hip3-telemetry" }
hip3-persistence = { path = "crates/hip3-persistence" }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
