[package]
name = "hip3-detector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Dislocation detection for HIP-3 oracle/mark strategy"

[dependencies]
hip3-core = { workspace = true }
hip3-feed = { workspace = true }
hip3-risk = { workspace = true }
hip3-telemetry = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
rust_decimal_macros = { workspace = true }
