[package]
name = "hip3-executor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "IOC order execution for HIP-3 (Phase B)"

[dependencies]
hip3-core = { workspace = true }
hip3-ws = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
