[package]
name = "hip3-feed"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Market data feed aggregation for HIP-3"

[dependencies]
hip3-core = { workspace = true }
hip3-ws = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
rust_decimal = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
rust_decimal_macros = { workspace = true }
