[package]
name = "hip3-mm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Market making strategy for HIP-3 bot (weekend MM)"

[dependencies]
hip3-core = { workspace = true }
serde = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
toml = { workspace = true }
