[package]
name = "hip3-persistence"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Data persistence (Parquet) for HIP-3"

[dependencies]
hip3-core = { workspace = true }
tokio = { workspace = true }
parquet = { workspace = true }
arrow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = "3"
