[package]
name = "hip3-ws"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "WebSocket client for HIP-3 exchange connections"

[dependencies]
hip3-core = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
rustls = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
